--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,10 @@
-.App {
-  text-align: center;
+html {
+  font-family: 'Satisfy', cursive;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+canvas {
+  box-shadow: 3px 6px 9px 0 #c7c5c7;
+  -webkit-box-shadow: 3px 6px 9px 0 #c7c5c7;
+  -moz-box-shadow: 3px 6px 9px 0 #c7c5c7;
+  border-radius: 5px;
 }
